syntax = "proto3";
package pb;

option go_package = "github.com/yeqown/tracing-practice/api;api";

service PingC {
    rpc PingC(PingCReq) returns(PingCResponse) {};
}

message PingCReq{
    int64 now = 1;
    string from = 2;
};

message PingCResponse{
    int64 now = 1;
};