syntax = "proto3";
package pb;

option go_package = "protogen";

service PingA {
    rpc PingA(PingAReq) returns(PingAResponse) {};
}

message PingAReq{
    int64 now = 1;
    string from = 2;
};

message PingAResponse{
    int64 now = 1;
};